Update hero section content to announce Ausgabe 1 with new themes

--- a/public/index.html
+++ b/public/index.html
@@ -292,7 +292,7 @@ Wir Magazin
                     Ein plurales Magazin
                 </h2>
                 <p class="hero-content">
-                    Coming soon&hellip;
+                    Jetzt neu: Ausgabe 1 - Themen rund um Innenwelten, Außenwelten und mehr. Schau vorbei!
                 </p>
                 <div class="row">
                     <div class="col-auto h-100">
